<resources>
    <string name="app_name">Toko Elektronik</string>
    <string name="content_judul">computer</string>
    <string name="content_price">Rp.3.000.000</string>
    <string name="content_kualitas">100%</string>
    <string name="content_deskripsi">perangkat elektronik yang dapat diprogram
    yang menerima data mentah sebagai input dan memprosesnya dengan sekumpulan
    instruksi (program) untuk menghasilkan hasil sebagai output.</string>
    <string name="content_belisekrang">beli sekarang</string>


</resources>